- Fixed [#20770] Can't get specs to run for desert-based plugin bug (http://rubyforge.org/tracker/index.php?func=detail&aid=20770&group_id=6426&atid=24920)
- Fixed [#21564] Can't see desert rake tasks (http://rubyforge.org/tracker/index.php?func=detail&aid=21564&group_id=6426&atid=24920)

0.3.2
- Fixed exception in testspec.rake when rspec is not loaded
- Fix template loading on Edge Rails and on Rails 2.1.0

0.3.1
- Fix migration issue with Rails 2.1.0 using timestamps.

0.3.0
- Fixed script/destroy not removing the routes [From Jeff Dean]
- gem includes the Rails generator files [From Jeff Dean]
- Fixed readding the route to config/routes.rb in the script/destroy task [From Jeff Dean]
- Github now properly formats readme [From Jeff Dean]
- Updated the gemspec so rdoc includes it and updated it to add installation and setup instructions [From Jeff Dean]
- Removed sample route from generator [From Jeff Dean]

0.2.1
- Fixed ActionMailer rendering in Rails 1.99.0

0.2.0
- Works with edge Rails
- Removed Desert::Plugin#up_to_date?
- Removed Migrator#latest_version

0.1.1
- Works with edge Rails
- Fixed double loading issue with not fully expanded load_paths.

0.1.0
- Fixed [#13346] ActionController::Base.helper raises error when helper is only in plugin
- Desert does not require files that have been required before Desert was loaded